; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/tag/extr_write.c_create_annotation.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/tag/extr_write.c_create_annotation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tagger_name = common dso_local global i32 0, align 4
@tagger_email = common dso_local global i32 0, align 4
@tagged_commit = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"boom!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @create_annotation(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32, i32* @tagger_name, align 4
  %9 = load i32, i32* @tagger_email, align 4
  %10 = call i32 @git_signature_new(i32** %7, i32 %8, i32 %9, i32 123456789, i32 60)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @tagged_commit, align 4
  %13 = call i32 @git_oid_fromstr(i32* %6, i32 %12)
  %14 = load i32, i32* @g_repo, align 4
  %15 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %16 = call i32 @git_object_lookup(i32** %5, i32 %14, i32* %6, i32 %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* @g_repo, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @git_tag_annotation_create(i32* %18, i32 %19, i8* %20, i32* %21, i32* %22, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @git_object_free(i32* %25)
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @git_signature_free(i32* %27)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_signature_new(i32**, i32, i32, i32, i32) #1

declare dso_local i32 @git_oid_fromstr(i32*, i32) #1

declare dso_local i32 @git_object_lookup(i32**, i32, i32*, i32) #1

declare dso_local i32 @git_tag_annotation_create(i32*, i32, i8*, i32*, i32*, i8*) #1

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @git_signature_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
